Migrated some default spacing styles to template. Switched to greyscale for default color theme (to avoid confusion with other color themes.

--- a/src/htdocs/css/_template.scss
+++ b/src/htdocs/css/_template.scss
@@ -7,12 +7,12 @@ $banner-background-color: #000 !default;
 
 $site-title: 'U.S. Geological Survey' !default;
 $site-title-color: #fff !default;
-$site-title-background-color: #4E7AB9 !default;
+$site-title-background-color: #999 !default;
 
 
-$spacing: 8px !default;
+$spacing: 16px !default;
 $horizontal-spacing: $spacing !default;
-$vertical-spacing: $spacing !default;
+$vertical-spacing: 12px !default;
 
 
 $breakpoint-full: 768px !default;
@@ -29,8 +29,8 @@ $search-background-color: #EEE !default;
 $search-border-color: #CCC !default;
 
 
-$sitenav-color: #132840 !default;
-$sitenav-background-color: #C9D8E9 !default;
+$sitenav-color: #222 !default;
+$sitenav-background-color: #CCC !default;
 $sitenav-color-hover: #111 !default;
 $sitenav-background-color-hover: darken($sitenav-background-color, 10%) !default;
 $sitenav-border-color-hover: #111 !default;
